--- a/app/globals.css
+++ b/app/globals.css
@@ -31,6 +31,7 @@
         --chart-4: 43 74% 66%;
         --chart-5: 27 87% 67%;
     }
+
     .dark {
         --background: 173 50% 5%;
         --foreground: 173 5% 90%;
@@ -175,6 +176,7 @@
     * {
         @apply border-border;
     }
+
     body {
         @apply box-border bg-background text-foreground;
     }
@@ -182,11 +184,14 @@
 
 @layer utilities {
     .min-h-screen {
-        min-height: 100vh; /* Fallback */
+        min-height: 100vh;
+        /* Fallback */
         min-height: 100dvh;
     }
+
     .h-screen {
-        height: 100vh; /* Fallback */
+        height: 100vh;
+        /* Fallback */
         height: 100dvh;
     }
 }
